Add family login, household management, reminders, dashboard stats, expiry notifications, SES/SNS infra
- Replace fake temp_token auth with real JWT (jjwt 0.12.3)
- Add JwtUtil + JwtAuthenticationFilter; rewire SecurityConfig to stateless JWT chain
- UserService now implements UserDetailsService for Spring Security
- AuthController issues real signed JWTs on login/register
- ItemController uses @AuthenticationPrincipal instead of manual token parsing

- New Household management: create, invite by email, remove member, leave, delete
- HouseholdController + HouseholdService + HouseholdDto with live stats

- New Reminders feature: CRUD + mark done, overdue detection, household scope
- Reminder entity, ReminderRepository, ReminderService, ReminderController
- ReminderDto with status (PENDING/DONE) and due date

- New Dashboard stats endpoint: aggregated items/expiring/expired/members/reminders
- DashboardService + DashboardController + DashboardStatsDto

- NotificationService: daily 08:00 scheduled email via Spring Mail to AWS SES SMTP
- Expiry alerts grouped by user; reminder overdue alerts grouped by creator
- Controlled by NOTIFICATIONS_ENABLED env var (default false for local dev)

- database/init.sql: add reminders table, notification_log audit table, indexes, sample data
- application.properties: add SMTP and NOTIFICATIONS env var bindings

- Frontend: Dashboard rewritten with live stat cards + expiring list + reminders list
- Frontend: new Household page (create, invite, member management)
- Frontend: new Reminders page (add, complete, delete, overdue badge)
- App.tsx: nav bar with all routes, PrivateRoute guard, logout

- Terraform: new ses.tf (SES domain identity, DKIM, IAM SMTP user, Secrets Manager)
- Terraform: ecs.tf injects SMTP env vars and grants Secrets Manager access to task role
- Terraform: variables.tf adds environment, ops_email, notifications_enabled
- Packer: backend.pkr.hcl installs mailutils, verifies SES SMTP port at build time
- Packer: start